--- a/RICADO.MettlerToledo/RICADO.MettlerToledo.csproj
+++ b/RICADO.MettlerToledo/RICADO.MettlerToledo.csproj
@@ -13,6 +13,7 @@
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+    <PackageTags>mettler,toledo,loadcell,mt-sics,weighing,act350,sics-protocol</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
