--- a/RICADO.MettlerToledo/RICADO.MettlerToledo.csproj
+++ b/RICADO.MettlerToledo/RICADO.MettlerToledo.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net7.0;net6.0;netstandard2.0</TargetFrameworks>
-    <Authors>RICADO Group</Authors>
-    <Company>RICADO Group LP</Company>
-    <Description>A .NET 6/7 and .NET Standard 2.0 Library for Communicating with Mettler Toledo Indicators</Description>
-    <Copyright>Copyright © RICADO Group LP 2009 - 2023</Copyright>
+    <TargetFrameworks>net8.0;net7.0;net6.0;netstandard2.0</TargetFrameworks>
+    <Authors>RICADO</Authors>
+    <Company>RICADO Limited</Company>
+    <Description>A .NET 6+ and .NET Standard 2.0 Library for Communicating with Mettler Toledo Indicators</Description>
+    <Copyright>Copyright © RICADO Limited 2009 - 2024</Copyright>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageIcon>packageIcon.png</PackageIcon>
     <RepositoryUrl>https://github.com/ricado-group/dotnet-mettlertoledo</RepositoryUrl>
